@@ -83,6 +83,8 @@ Release 0.4.0 - Unreleased
   OPTIMIZATIONS
 
   BUG FIXES
+  HCAT-291 Pig and MR fail to write to a sequence file (avandana via gates)
+
   HCAT-305 hcat shell is not properly picking up the hcat jar (gates)
 
   HCAT-307 NOTICE and LICENSE file need updated to add new jars and move copyright date to 2012 (gates)
